--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
       src="https://kit.fontawesome.com/c7414cb6d4.js"
       crossorigin="anonymous"
     ></script>
+    <link
+      href="https://fonts.googleapis.com/css?family=Abel&display=swap"
+      rel="stylesheet"
+    />
   </head>
+
   <body>
     <header>
       <div class="header-container">
@@ -38,9 +43,27 @@
     <main>
       <div class="main-container">
         <div class="main-1">
-          <img src="" alt="" />
+          <img src="/images/main-img.jpg" alt="hamburger and fries img" />
         </div>
-        <div class="main-2"></div>
+        <div class="main-2">
+          <h3>Put spices in your life!</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Et repellat
+            repellendus laborum animi quam in libero aliquam, pariatur earum!
+            Sit magni consectetur, libero ducimus eos accusantium nobis commodi
+            repudiandae nostrum vero laborum illum ab quos.
+          </p>
+          <br />
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti
+            omnis vero iusto ratione, sapiente quia? Accusamus cumque
+            consequatur porro, nihil temporibus numquam assumenda ratione vitae
+            quos quidem earum autem, praesentium eveniet voluptates aperiam.
+            Dolores, esse.
+          </p>
+          <br />
+          <p><small>-Insider</small></p>
+        </div>
       </div>
     </main>
 
