--- a/index.html
+++ b/index.html
@@ -1,97 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Food Hub</title>
-    <link rel="stylesheet" href="styles/style.css" />
-    <script
-      src="https://kit.fontawesome.com/c7414cb6d4.js"
-      crossorigin="anonymous"
-    ></script>
-    <link
-      href="https://fonts.googleapis.com/css?family=Abel&display=swap"
-      rel="stylesheet"
-    />
-  </head>
 
-  <body>
-    <header>
-      <div class="header-container">
-        <div class="logo">
-          <h1>Food Hub <i class="fas fa-hamburger"></i></h1>
-        </div>
-        <ul class="nav-links">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Gallery</a></li>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">Contact</a></li>
-          <li><a href="mealfinder.html">Meal Finder</a></li>
-        </ul>
-        <div class="hamburger">
-          <div class="line1"></div>
-          <div class="line2"></div>
-          <div class="line3"></div>
-        </div>
-      </div>
-      <div class="hero-banner-title">
-        <h1>Food Hub</h1>
-        <p>Crave it, make it</p>
-      </div>
-    </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Food Hub</title>
+  <link rel="stylesheet" href="styles/style.css" />
+  <script src="https://kit.fontawesome.com/c7414cb6d4.js" crossorigin="anonymous"></script>
+  <link href="https://fonts.googleapis.com/css?family=Abel&display=swap" rel="stylesheet" />
+</head>
 
-    <main>
-      <div class="main-container">
-        <div class="main-1">
-          <img src="/images/main-img.jpg" alt="hamburger and fries img" />
-        </div>
-        <div class="main-2">
-          <h3>Put spices in your life!</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Et repellat
-            repellendus laborum animi quam in libero aliquam, pariatur earum!
-            Sit magni consectetur, libero ducimus eos accusantium nobis commodi
-            repudiandae nostrum vero laborum illum ab quos.
-          </p>
-          <br />
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti
-            omnis vero iusto ratione, sapiente quia? Accusamus cumque
-            consequatur porro, nihil temporibus numquam assumenda ratione vitae
-            quos quidem earum autem, praesentium eveniet voluptates aperiam.
-            Dolores, esse.
-          </p>
-          <br />
-          <p><small>-Insider</small></p>
-        </div>
+<body>
+  <header>
+    <div class="header-container">
+      <div class="logo">
+        <h1>Food Hub <i class="fas fa-hamburger"></i></h1>
       </div>
-    </main>
-
-    <section>
-      <div class="recipe-container">
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
+      <ul class="nav-links">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Gallery</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><a href="mealfinder.html">Meal Finder</a></li>
+      </ul>
+      <div class="hamburger">
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
       </div>
-    </section>
+    </div>
+    <div class="hero-banner-title">
+      <h1>Food Hub</h1>
+      <p>Crave it, make it</p>
+    </div>
+  </header>
 
-    <footer>
-      <div class="social-media">
-        <div class="social-title">
-          <h3>Connect with us</h3>
-        </div>
-        <div class="social-icons">
-          <i class="fab fa-facebook"></i>
-          <i class="fab fa-instagram"></i>
-          <i class="fab fa-twitter"></i>
-        </div>
+  <main>
+    <div class="main-container">
+      <div class="main-1">
+        <img src="/images/main-img.jpg" alt="hamburger and fries img" />
       </div>
-      <div class="hours"></div>
-    </footer>
+      <div class="main-2">
+        <h3>Put spices in your life!</h3>
+        <p>
+          Sit magni consectetur, libero ducimus eos accusantium nobis commodi
+          repudiandae nostrum vero laborum illum ab quos.
+        </p>
+        <br />
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti
+          omnis vero iusto ratione, sapiente quia? Accusamus cumque
+          consequatur porro, nihil temporibus numquam assumenda ratione vitae
+          quos quidem earum autem, praesentium eveniet voluptates aperiam.
+          Dolores, esse.
+        </p>
+        <br />
+        <p><small>-Insider</small></p>
+      </div>
+    </div>
+  </main>
 
-    <script src="app.js"></script>
-  </body>
+  <section>
+    <div class="recipe-container">
+      <div class="card"></div>
+      <div class="card"></div>
+      <div class="card"></div>
+      <div class="card"></div>
+      <div class="card"></div>
+      <div class="card"></div>
+    </div>
+  </section>
+
+  <footer>
+    <div class="social-media">
+      <div class="social-title">
+        <h3>Connect with us</h3>
+      </div>
+      <div class="social-icons">
+        <i class="fab fa-facebook"></i>
+        <i class="fab fa-instagram"></i>
+        <i class="fab fa-twitter"></i>
+      </div>
+    </div>
+    <div class="hours"></div>
+  </footer>
+
+  <script src="app.js"></script>
+</body>
+
 </html>
