--- a/index.html
+++ b/index.html
@@ -56,36 +56,56 @@
         </p>
         <br />
         <p><small>-Insider</small></p>
-      </div>
-    </div>
-  </main>
+        </div8 </div> </main> <section>
+        <div class="recipe-container">
+          <img src="images/img2.jpg" alt="" />
+          <img src="images/img1.jpg" alt="" />
+          <img src="images/img3.jpg" alt="" />
+          <div class="recipe-title">
+            <h3>the food grid.</h3>
+          </div>
+        </div>
+        </section>
 
-  <section>
-    <div class="recipe-container">
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-    </div>
-  </section>
+        <footer>
+          <div class="social-media">
+            <div class="social-title">
+              <h3>Connect with us</h3>
+              
+            </div>
+            <div class="social-icons">
+              <i class="fab fa-facebook fa-2x"></i>
+              <i class="fab fa-instagram fa-2x"></i>
+              <i class="fab fa-twitter fa-2x"></i>
+            </div>
+          </div>
+          <div class="hours">
+            <div class="day">
+              <h3>OPENING HOURS:</h3>
+              <span>Monday: 8:00 am - 10:00 pm</span>
+            </div>
+            <div class="day">
+              <span>Tuesday: 8:00 am - 10:00 pm</span>
+            </div>
+            <div class="day">
+              <span>Wednesday: 8:00 am - 10:00 pm</span>
+            </div>
+            <div class="day">
+              <span>Thursday: 8:00 am - 10:00 pm</span>
+            </div>
+            <div class="day">
+              <span>Friday: 8:00 am - 10:00 pm</span>
+            </div>
+            <div class="day">
+              <span>Saturday: 8:00 am - 10:00 pm</span>
+            </div>
+            <div class="day">
+              <span>Sunday: 8:00 am - 10:00 pm</span>
+            </div>
+          </div>
+        </footer>
 
-  <footer>
-    <div class="social-media">
-      <div class="social-title">
-        <h3>Connect with us</h3>
-      </div>
-      <div class="social-icons">
-        <i class="fab fa-facebook"></i>
-        <i class="fab fa-instagram"></i>
-        <i class="fab fa-twitter"></i>
-      </div>
-    </div>
-    <div class="hours"></div>
-  </footer>
-
-  <script src="app.js"></script>
+        <script src="app.js"></script>
 </body>
 
 </html>
