added meal finder

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       </div>
       <ul class="nav-links">
         <li><a href="#">Home</a></li>
-        <li><a href="#">Gallery</a></li>
-        <li><a href="#">Blog</a></li>
+        <li><a href="#">Menu</a></li>
+        <li><a href="#">Social Media</a></li>
         <li><a href="#">Contact</a></li>
         <li><a href="mealfinder.html">Meal Finder</a></li>
       </ul>
@@ -71,12 +71,21 @@
           <div class="social-media">
             <div class="social-title">
               <h3>Connect with us</h3>
-              
+
             </div>
             <div class="social-icons">
               <i class="fab fa-facebook fa-2x"></i>
               <i class="fab fa-instagram fa-2x"></i>
               <i class="fab fa-twitter fa-2x"></i>
+            </div>
+            <div class="newsletter">
+              <h3>Subscribe to our newsletter!</h3>
+              <form action="">
+                <label for="name">Name</label>
+                <input type="text" name="name" id="name" placeholder="Enter your name">
+                <label for="email">Email</label>
+                <input type="email" placeholder="Enter your email address">
+              </form>
             </div>
           </div>
           <div class="hours">
@@ -97,10 +106,10 @@
               <span>Friday: 8:00 am - 10:00 pm</span>
             </div>
             <div class="day">
-              <span>Saturday: 8:00 am - 10:00 pm</span>
+              <span>Saturday: 8:00 am - 11:00 pm</span>
             </div>
             <div class="day">
-              <span>Sunday: 8:00 am - 10:00 pm</span>
+              <span>Sunday: 10:00 am - 06:00 pm</span>
             </div>
           </div>
         </footer>
