--- a/index.html
+++ b/index.html
@@ -67,6 +67,84 @@
         </div>
         </section>
 
+        <section>
+          <div class="menu-container">
+            <div class="menu-card">
+              <div class="menu-food">
+                <img src="/images/menu1.jpg" alt="">
+                <p>El Granada Burger</p>
+                <small>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore veniam labore totam nemo
+                  dolorum soluta.</small>
+                <div class="price-container">
+                  <p class="food-price">$11.50</p>
+                </div>
+              </div>
+            </div>
+            <div class="menu-card">
+              <div class="menu-food">
+                <img src="/images/menu2.jpg" alt="">
+                <p>Philippines Dynamite Fries</p>
+                <small>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore veniam labore totam nemo
+                  dolorum
+                  soluta.</small>
+                <div class="price-container">
+                  <p class="food-price">$6.99</p>
+                </div>
+              </div>
+            </div>
+            <div class="menu-card">
+              <div class="menu-food">
+                <img src="/images/menu-6.jpg" alt="">
+                <p>Mad Yorker Dogs</p>
+                <small>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore veniam labore totam nemo
+                  dolorum
+                  soluta.</small>
+                <div class=" price-container">
+                  <p class="food-price">$7.75</p>
+                </div>
+              </div>
+            </div>
+            <div class="menu-card">
+              <div class="menu-food">
+                <img src="/images/menu-4.jpg" alt="">
+                <p>Sweet Mary Sundae</p>
+                <small>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore veniam labore totam nemo
+                  dolorum
+                  soluta.</small>
+                <div class="price-container">
+                  <p class="food-price">$5.25</p>
+                </div>
+              </div>
+            </div>
+            <div class="menu-card">
+              <div class="menu-food">
+                <img src="/images/menu-5.jpg" alt="">
+                <p>Everlasting Smoothie</p>
+                <small>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore veniam labore totam nemo
+                  dolorum
+                  soluta.</small>
+                <div class="price-container">
+                  <p class="food-price">$8.99</p>
+                </div>
+              </div>
+            </div>
+            <div class="menu-card">
+              <div class="menu-food">
+                <img src="/images/menu-3.webp" alt="">
+                <p>Amazonian Skewers</p>
+                <small>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore veniam labore totam nemo
+                  dolorum
+                  soluta.</small>
+                <div class="price-container">
+                  <p class="food-price">$12.49</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
+
+
         <footer>
           <div class="social-media">
             <div class="social-title">
