--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <main>
     <div class="main-container">
       <div class="main-1">
-        <img src="/images/main-img.jpg" alt="hamburger and fries img" />
+        <img src="images/main-img.jpg" alt="hamburger and fries img" />
       </div>
       <div class="main-2">
         <h3>Put spices in your life!</h3>
@@ -71,7 +71,7 @@
           <div class="menu-container">
             <div class="menu-card">
               <div class="menu-food">
-                <img src="/images/menu1.jpg" alt="">
+                <img src="images/menu1.jpg" alt="">
                 <p>El Granada Burger</p>
                 <small>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore veniam labore totam nemo
                   dolorum soluta.</small>
@@ -82,7 +82,7 @@
             </div>
             <div class="menu-card">
               <div class="menu-food">
-                <img src="/images/menu2.jpg" alt="">
+                <img src="images/menu2.jpg" alt="">
                 <p>Philippines Dynamite Fries</p>
                 <small>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore veniam labore totam nemo
                   dolorum
@@ -94,7 +94,7 @@
             </div>
             <div class="menu-card">
               <div class="menu-food">
-                <img src="/images/menu-6.jpg" alt="">
+                <img src="images/menu-6.jpg" alt="">
                 <p>Mad Yorker Dogs</p>
                 <small>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore veniam labore totam nemo
                   dolorum
@@ -106,7 +106,7 @@
             </div>
             <div class="menu-card">
               <div class="menu-food">
-                <img src="/images/menu-4.jpg" alt="">
+                <img src="images/menu-4.jpg" alt="">
                 <p>Sweet Mary Sundae</p>
                 <small>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore veniam labore totam nemo
                   dolorum
@@ -118,7 +118,7 @@
             </div>
             <div class="menu-card">
               <div class="menu-food">
-                <img src="/images/menu-5.jpg" alt="">
+                <img src="images/menu-5.jpg" alt="">
                 <p>Everlasting Smoothie</p>
                 <small>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore veniam labore totam nemo
                   dolorum
@@ -130,7 +130,7 @@
             </div>
             <div class="menu-card">
               <div class="menu-food">
-                <img src="/images/menu-3.webp" alt="">
+                <img src="images/menu-3.webp" alt="">
                 <p>Amazonian Skewers</p>
                 <small>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore veniam labore totam nemo
                   dolorum
