made images responsive

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <header>
+  <header loading="lazy">
     <div class="header-container">
       <div class="logo">
         <h1>Food Hub <i class="fas fa-hamburger"></i></h1>
@@ -38,7 +38,7 @@
   <main>
     <div class="main-container">
       <div class="main-1">
-        <img src="images/main-img.jpg" alt="hamburger and fries img" />
+        <img src="images/main-img.jpg" alt="hamburger and fries img" loading="lazy" />
       </div>
       <div class="main-2">
         <h3>Put spices in your life!</h3>
@@ -56,143 +56,146 @@
         </p>
         <br />
         <p><small>-Insider</small></p>
-        </div8 </div> </main> <section>
-        <div class="recipe-container">
-          <img src="images/img2.jpg" alt="" />
-          <img src="images/img1.jpg" alt="" />
-          <img src="images/img3.jpg" alt="" />
-          <div class="recipe-title">
-            <h3>the food grid.</h3>
+      </div>
+    </div>
+  </main>
+  <section>
+    <div class="recipe-container">
+      <img src="images/img2.jpg" alt="showcase-1" loading="lazy" />
+      <img src=" images/img1.jpg" alt="showcase-2" loading="lazy" />
+      <img src="images/img3.jpg" alt="showcase-3" loading="lazy" />
+      <div class="recipe-title">
+        <h3>the food grid.</h3>
+      </div>
+    </div>
+  </section>
+
+  <section class="menu-section">
+    <div class="menu-container">
+      <div class="menu-card">
+        <div class="menu-food">
+          <img src="images/menu1.jpg" alt="" loading="lazy">
+          <p>El Granada Burger</p>
+          <small>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore veniam labore totam nemo
+            dolorum soluta.</small>
+          <div class="price-container">
+            <p class="food-price">$11.50</p>
           </div>
         </div>
-        </section>
-
-        <section>
-          <div class="menu-container">
-            <div class="menu-card">
-              <div class="menu-food">
-                <img src="images/menu1.jpg" alt="">
-                <p>El Granada Burger</p>
-                <small>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore veniam labore totam nemo
-                  dolorum soluta.</small>
-                <div class="price-container">
-                  <p class="food-price">$11.50</p>
-                </div>
-              </div>
-            </div>
-            <div class="menu-card">
-              <div class="menu-food">
-                <img src="images/menu2.jpg" alt="">
-                <p>Philippines Dynamite Fries</p>
-                <small>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore veniam labore totam nemo
-                  dolorum
-                  soluta.</small>
-                <div class="price-container">
-                  <p class="food-price">$6.99</p>
-                </div>
-              </div>
-            </div>
-            <div class="menu-card">
-              <div class="menu-food">
-                <img src="images/menu-6.jpg" alt="">
-                <p>Mad Yorker Dogs</p>
-                <small>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore veniam labore totam nemo
-                  dolorum
-                  soluta.</small>
-                <div class=" price-container">
-                  <p class="food-price">$7.75</p>
-                </div>
-              </div>
-            </div>
-            <div class="menu-card">
-              <div class="menu-food">
-                <img src="images/menu-4.jpg" alt="">
-                <p>Sweet Mary Sundae</p>
-                <small>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore veniam labore totam nemo
-                  dolorum
-                  soluta.</small>
-                <div class="price-container">
-                  <p class="food-price">$5.25</p>
-                </div>
-              </div>
-            </div>
-            <div class="menu-card">
-              <div class="menu-food">
-                <img src="images/menu-5.jpg" alt="">
-                <p>Everlasting Smoothie</p>
-                <small>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore veniam labore totam nemo
-                  dolorum
-                  soluta.</small>
-                <div class="price-container">
-                  <p class="food-price">$8.99</p>
-                </div>
-              </div>
-            </div>
-            <div class="menu-card">
-              <div class="menu-food">
-                <img src="images/menu-3.webp" alt="">
-                <p>Amazonian Skewers</p>
-                <small>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore veniam labore totam nemo
-                  dolorum
-                  soluta.</small>
-                <div class="price-container">
-                  <p class="food-price">$12.49</p>
-                </div>
-              </div>
-            </div>
+      </div>
+      <div class="menu-card">
+        <div class="menu-food">
+          <img src="images/menu2.jpg" alt="" loading="lazy">
+          <p>Dynamite Fries</p>
+          <small>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore veniam labore totam nemo
+            dolorum
+            soluta.</small>
+          <div class="price-container">
+            <p class="food-price">$6.99</p>
           </div>
-        </section>
-
-
-
-        <footer>
-          <div class="social-media">
-            <div class="social-title">
-              <h3>Connect with us</h3>
-
-            </div>
-            <div class="social-icons">
-              <i class="fab fa-facebook fa-2x"></i>
-              <i class="fab fa-instagram fa-2x"></i>
-              <i class="fab fa-twitter fa-2x"></i>
-            </div>
-            <div class="newsletter">
-              <h3>Subscribe to our newsletter!</h3>
-              <form action="">
-                <label for="name">Name</label>
-                <input type="text" name="name" id="name" placeholder="Enter your name">
-                <label for="email">Email</label>
-                <input type="email" placeholder="Enter your email address">
-              </form>
-            </div>
+        </div>
+      </div>
+      <div class="menu-card">
+        <div class="menu-food">
+          <img src="images/menu-6.jpg" alt="" loading="lazy">
+          <p>Mad Yorker Dogs</p>
+          <small>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore veniam labore totam nemo
+            dolorum
+            soluta.</small>
+          <div class=" price-container">
+            <p class="food-price">$7.75</p>
           </div>
-          <div class="hours">
-            <div class="day">
-              <h3>OPENING HOURS:</h3>
-              <span>Monday: 8:00 am - 10:00 pm</span>
-            </div>
-            <div class="day">
-              <span>Tuesday: 8:00 am - 10:00 pm</span>
-            </div>
-            <div class="day">
-              <span>Wednesday: 8:00 am - 10:00 pm</span>
-            </div>
-            <div class="day">
-              <span>Thursday: 8:00 am - 10:00 pm</span>
-            </div>
-            <div class="day">
-              <span>Friday: 8:00 am - 10:00 pm</span>
-            </div>
-            <div class="day">
-              <span>Saturday: 8:00 am - 11:00 pm</span>
-            </div>
-            <div class="day">
-              <span>Sunday: 10:00 am - 06:00 pm</span>
-            </div>
+        </div>
+      </div>
+      <div class="menu-card">
+        <div class="menu-food">
+          <img src="images/menu-4.jpg" alt="" loading="lazy">
+          <p>Sweet Mary Sundae</p>
+          <small>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore veniam labore totam nemo
+            dolorum
+            soluta.</small>
+          <div class="price-container">
+            <p class="food-price">$5.25</p>
           </div>
-        </footer>
+        </div>
+      </div>
+      <div class="menu-card">
+        <div class="menu-food">
+          <img src="images/menu-5.jpg" alt="" loading="lazy">
+          <p>Everlasting Smoothie</p>
+          <small>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore veniam labore totam nemo
+            dolorum
+            soluta.</small>
+          <div class="price-container">
+            <p class="food-price">$8.99</p>
+          </div>
+        </div>
+      </div>
+      <div class="menu-card">
+        <div class="menu-food">
+          <img src="images/menu-3.webp" alt="" loading="lazy">
+          <p>Amazonian Skewers</p>
+          <small>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore veniam labore totam nemo
+            dolorum
+            soluta.</small>
+          <div class="price-container">
+            <p class="food-price">$12.49</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
-        <script src="app.js"></script>
+
+
+  <footer>
+    <div class="social-media">
+      <div class="social-title">
+        <h3>Connect with us</h3>
+
+      </div>
+      <div class="social-icons">
+        <i class="fab fa-facebook fa-2x"></i>
+        <i class="fab fa-instagram fa-2x"></i>
+        <i class="fab fa-twitter fa-2x"></i>
+      </div>
+      <div class="newsletter">
+        <h3>Subscribe to our newsletter!</h3>
+        <form action="">
+          <label for="name">Name</label>
+          <input type="text" name="name" id="name" placeholder="Enter your name">
+          <label for="email">Email</label>
+          <input type="email" placeholder="Enter your email address">
+        </form>
+      </div>
+    </div>
+    <div class="hours">
+      <div class="day">
+        <h3>OPENING HOURS:</h3>
+        <span>Monday: 8:00 am - 10:00 pm</span>
+      </div>
+      <div class="day">
+        <span>Tuesday: 8:00 am - 10:00 pm</span>
+      </div>
+      <div class="day">
+        <span>Wednesday: 8:00 am - 10:00 pm</span>
+      </div>
+      <div class="day">
+        <span>Thursday: 8:00 am - 10:00 pm</span>
+      </div>
+      <div class="day">
+        <span>Friday: 8:00 am - 10:00 pm</span>
+      </div>
+      <div class="day">
+        <span>Saturday: 8:00 am - 11:00 pm</span>
+      </div>
+      <div class="day">
+        <span>Sunday: 10:00 am - 06:00 pm</span>
+      </div>
+    </div>
+  </footer>
+
+  <script src="app.js"></script>
 </body>
 
 </html>
