fixed browser compatibility

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
   </main>
   <section>
     <div class="recipe-container">
-      <img src="images/img2.jpg" alt="showcase-1" loading="lazy" />
-      <img src=" images/img1.jpg" alt="showcase-2" loading="lazy" />
-      <img src="images/img3.jpg" alt="showcase-3" loading="lazy" />
+      <img src="images/img2.jpg" loading="lazy" style="height:667px" />
+      <img src=" images/img1.jpg" loading="lazy" style="height:667px" />
+      <img src="images/img3.jpg" loading="lazy" style="height:667px" />
       <div class="recipe-title">
         <h3>the food grid.</h3>
       </div>
