--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <h1>Food Hub <i class="fas fa-hamburger"></i></h1>
       </div>
       <ul class="nav-links">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Menu</a></li>
-        <li><a href="#">Social Media</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="#menu-container">Menu</a></li>
+        <li><a href="#social-icons">Social Media</a></li>
+        <li><a href="#newsletter">Contact</a></li>
         <li><a href="mealfinder.html">Meal Finder</a></li>
       </ul>
       <div class="hamburger">
@@ -31,7 +31,8 @@
     </div>
     <div class="hero-banner-title">
       <h1>Food Hub</h1>
-      <p>Crave it, make it</p>
+      <p>"The number one restaurant & bar in Calgary"</p>
+      <small>- House of Gourmets 2020</small>
     </div>
   </header>
 
@@ -71,6 +72,9 @@
   </section>
 
   <section>
+    <div class="menu-title" id="menu-container">
+      <h3>Food Hub Best Sellers</h3>
+    </div>
     <div class="menu-container">
 
       <div class="menu-card">
@@ -165,12 +169,12 @@
       <div class="social-title">
         <h3>Connect with us</h3>
       </div>
-      <div class="social-icons">
+      <div class="social-icons" id="social-icons">
         <i class="fab fa-facebook fa-2x"></i>
         <i class="fab fa-instagram fa-2x"></i>
         <i class="fab fa-twitter fa-2x"></i>
       </div>
-      <div class="newsletter">
+      <div class="newsletter" id="newsletter">
         <h3>Subscribe to our newsletter!</h3>
         <form action="">
           <label for="name">Name</label>
