--- a/mealfinder.html
+++ b/mealfinder.html
@@ -17,10 +17,10 @@
       </div>
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
-        <li><a href="#">Menu</a></li>
+        <!-- <li><a href="#">Menu</a></li>
         <li><a href="#">Social Media</a></li>
         <li><a href="#">Contact</a></li>
-        <li><a href="mealfinder.html">Meal Finder</a></li>
+        <li><a href="mealfinder.html">Meal Finder</a></li> -->
       </ul>
       <div class="hamburger">
         <div class="line1"></div>
